[add]modified the scripts and the taskstack module